--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.8.3
+streamlit==1.38.0
+scikit-learn==1.5.2
+joblib==1.4.2
+pandas==2.2.3
+numpy==2.1.2   # versi terbaru, support Python 3.13
+torch
+torchvision
+Pillow
+streamlit-drawable-canvas
+
 seaborn==0.13.2
 beautifulsoup4==4.12.3
 requests==2.31.0
-Pillow==10.2.0
 wordcloud==1.9.3
-scikit-learn==1.4.1.post1
 sastrawi==1.0.1
 imbalanced-learn==0.12.2
